--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.4.0",
     "ts-node": "^10.9.1",
     "ts-standard": "^12.0.1",
     "typescript": "4.8.4"
@@ -50,7 +51,10 @@
       "quotes": [
         "error",
         "single",
-        { "avoidEscape": true, "allowTemplateLiterals": false }
+        {
+          "avoidEscape": true,
+          "allowTemplateLiterals": false
+        }
       ]
     }
   }
