--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "axios": "^1.1.2",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
