--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "next": "^12.3.1",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.8",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
