--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "prettier"
     ],
     "rules": {
+      "@typescript-eslint/promise-function-async": 0,
       "@typescript-eslint/no-misused-promises": 0,
       "@typescript-eslint/strict-boolean-expressions": 0,
       "quotes": [
