feat: post message initial

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "incremental": true,
     "plugins": [{"name":"typescript-plugin-css-modules"}]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/lib"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/lib","**/tools.d.ts"],
   "exclude": ["node_modules"]
 }
