--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "@uiw/react-md-editor": "3.6.0",
     "axios": "^1.1.2",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
@@ -19,8 +20,10 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "next": "^12.3.1",
+    "next-remove-imports": "^1.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.9",
