--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "axios": "^1.1.2",
+    "chart.js": "^3.9.1",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
@@ -20,6 +22,7 @@
     "koa-router": "^12.0.0",
     "next": "^12.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
